Use SequencedCollection.getLast instead of manual index computation
This is obviously nicer.

Commit automatically generated with Refaster.