@@ -209,7 +209,7 @@ public class ARGToDotWriter {
               .append("Lines ")
               .append(edges.get(0).getLineNumber())
               .append(" - ")
-              .append(edges.get(edges.size() - 1).getLineNumber());
+              .append(edges.getLast().getLineNumber());
         } else {
           builder.append("Line ").append(edges.get(0).getLineNumber());
         }
