@@ -88,10 +88,9 @@ public class ARGPathTest {
 
     // last ARGState is the end of the CFA-path we created before
     LocationState lastState = Mockito.mock(LocationState.class);
-    Mockito.when(lastState.getLocationNode())
-        .thenReturn(edges.get(edges.size() - 1).getSuccessor());
+    Mockito.when(lastState.getLocationNode()).thenReturn(edges.getLast().getSuccessor());
     Mockito.when(lastState.getLocationNodes())
-        .thenReturn(Collections.singleton(edges.get(edges.size() - 1).getSuccessor()));
+        .thenReturn(Collections.singleton(edges.getLast().getSuccessor()));
 
     // build argPath
     ARGPathBuilder builder = ARGPath.builder();
