@@ -403,8 +403,7 @@ final class PredicateCPAInvariantsManager implements StatisticsProvider, Invaria
         PredicateAbstractState predState = PredicateAbstractState.getPredicateState(state);
         argForPathFormulaBasedGeneration.add(
             Pair.of(predState.getAbstractionFormula().getBlockFormula(), node));
-      } else if (!node.equals(
-          extractLocation(abstractionStatesTrace.get(abstractionStatesTrace.size() - 1)))) {
+      } else if (!node.equals(extractLocation(abstractionStatesTrace.getLast()))) {
         argForPathFormulaBasedGeneration.add(Pair.of(null, node));
       }
     }
@@ -707,7 +706,7 @@ final class PredicateCPAInvariantsManager implements StatisticsProvider, Invaria
       List<Pair<BooleanFormula, CFANode>> invariants = new ArrayList<>();
       for (ARGState s : abstractionStatesTrace) {
         // the last one will always be false, we don't need it here
-        if (!Objects.equals(s, abstractionStatesTrace.get(abstractionStatesTrace.size() - 1))) {
+        if (!Objects.equals(s, abstractionStatesTrace.getLast())) {
           CFANode location = extractLocation(s);
           Optional<CallstackStateEqualsWrapper> callstack = extractOptionalCallstackWraper(s);
           PredicateAbstractState pas = PredicateAbstractState.getPredicateState(s);
@@ -907,7 +906,7 @@ final class PredicateCPAInvariantsManager implements StatisticsProvider, Invaria
       for (final CFANode node : abstractionNodes) {
         // we don't want the last node to be here, as the invariant will always
         // be FALSE
-        if (node.equals(abstractionNodes.get(abstractionNodes.size() - 1))) {
+        if (node.equals(abstractionNodes.getLast())) {
           continue;
         }
         invariants.add(
