@@ -162,7 +162,7 @@ public class ThreadTransferRelation extends SingleEdgeTransferRelation {
     }
 
     if (!tSet.isEmpty()) {
-      ThreadLabel last = order.get(order.size() - 1);
+      ThreadLabel last = order.getLast();
       if (tSet.get(last.getVarName()) == ThreadStatus.SELF_PARALLEL_THREAD) {
         // Can add only the same status
         status = ThreadStatus.SELF_PARALLEL_THREAD;
